force-app/main/default/objects/Student__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>BirthDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>