force-app/main/default/objects/Student__c/fields/Total_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees_Paid__c</fullName>
    <label>Total_Fees_Paid</label>
    <summarizedField>Fee_Record__c.PayAmount__c</summarizedField>
    <summaryForeignKey>Fee_Record__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>