force-app/main/default/objects/Student__c/validationRules/Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY() &lt; ADDMONTHS(BirthDate__c, 16 * 12)</errorConditionFormula>
    <errorMessage>Student must be of 16 years to enroll into the college</errorMessage>
</ValidationRule>