force-app/main/default/objects/Student__c/validationRules/BirthDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>BirthDate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>BirthDate__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Birthdate cannot be in future</errorMessage>
</ValidationRule>