force-app/main/default/objects/Student__c/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(Email__c, &quot;@&quot;))</errorConditionFormula>
    <errorMessage>Email must contain &quot;@&quot;</errorMessage>
</ValidationRule>