force-app/main/default/objects/Student__c/validationRules/Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( First_Name__c ) &lt; 2</errorConditionFormula>
    <errorMessage>First Name must be at least 2 characters long.</errorMessage>
</ValidationRule>